<resources>
    <string name="app_name">Te Escucho</string>
    <string name="title_home">Inicio</string>
    <string name="title_glosary">Glosario</string>
    <string name="title_settings">Ajustes</string>
    <string name="msgwelcome">Hello there, Welcome</string>
    <string name="logUser">Ingrese su cuenta o correo</string>
    <string name="logedtUser">Usuario</string>
    <string name="logPass">Ingrese su contraseña</string>
    <string name="logedtPass">Contraseña</string>
    <string name="txtappname">Te escucho</string>
    <string name="logBtn">Iniciar Sesión</string>
    <string name="logRegist"><u>Registrarse</u></string>
    <string name="txtlogRecovP"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="RGRegister">Registro de usuarios</string>
    <string name="RGtxtNames">Ingrese sus nombres</string>
    <string name="RGedtNames">Nombres</string>
    <string name="RGtxtLastName">Ingrese sus apellidos</string>
    <string name="RGedtLastName">Apellidos</string>
    <string name="RGtxtEmail">Ingrese un correo electrónico</string>
    <string name="RGedtEmail">Correo</string>
    <string name="RGtxtPassword">Ingrese una contraseña segura</string>
    <string name="RGedtPassword">Contraseña</string>
    <string name="RGtxtPassword2">Repita la contraseña</string>
    <string name="RGedtPassword2">Repetir contraseña</string>
    <string name="RGtxtAccount">Ingrese una cuenta</string>
    <string name="RGedtAccount">Cuenta</string>
    <string name="RGbtn">Registrar</string>
    <string name="RGtxtcancel"><u>Cancelar</u></string>
    <string name="presSkip"><u>SKIP</u></string>
    <string name="presNext"><u>CONTINUE</u></string>

    <string name="question_Register"><u>¿Desea registrar esta cuenta?</u></string>
    <string name="question_ActUser"><u>¿Desea actualizar los datos?</u></string>
    <string name="question_ActPass"><u>¿Desea actualizar la contraseña?</u></string>
    <string name="question_Exit"><u>¿Desea salir?</u></string>
    <string name="question_Yes"><u>Si</u></string>
    <string name="question_No"><u>No</u></string>

    <string name="msj"><u>Usuario creado correctamente</u></string>
    <string name="msj1"><u>Datos actualizados correctamente</u></string>

    <string name="load_Register"><u>Registrando cuenta</u></string>
    <string name="load_Login"><u>Buscando ...</u></string>
    <string name="load_Theme"><u>Cargando los temas de la sesión ...</u></string>
    <string name="load_Eval"><u>Cargando la evaluación de la sesión ...</u></string>

    <string name="error_General"><u>ERROR:  No se pudo cargar la base de datos</u></string>
    <string name="error_Login"><u>La cuenta no existe</u></string>
    <string name="error_Login1"><u>Contraseña errada</u></string>
    <string name="error_Null"><u>Rellene todos los campos</u></string>
    <string name="error_Pass"><u>Las contraseñas son distintas</u></string>
    <string name="error_msj1"><u>El correo o cuenta ingresado ya fue registrado anteriormente</u></string>
    <string name="error_msj2"><u>No se pudo registrar</u></string>
    <string name="error_msj3"><u>No se pudo actualizar</u></string>
    <string name="error_msj4"><u>Evaluación no disponible.\nProgreso de la unidad: </u></string>
    <string name="error_sinconexion"><u>SIN CONEXIÓN</u></string>
    <string name="error_segPass">La contraseña debe ser más segura</string>
    <string name="error_segPass1">La contraseña debe ser mayor a 8 caracteres y contener: Minuscula, mayuscula, número y caracter especial</string>
    <string name="error_segAcco">La cuenta debe ser más segura</string>


    <string name="txteditacc">Editar tu perfil 👨</string>
    <string name="txteditaccnames">Ingresa tus nombres</string>
    <string name="txteditacclastname">Ingresa tus apellidos</string>
    <string name="btneditacc_save">Guardar</string>
    <string name="btneditacc_cancel">Cancelar</string>
    <string name="txteditpass">Cambiar contraseña 🔑</string>
    <string name="txtchangepass1">Ingresa tu nueva contraseña</string>
    <string name="hintchangepass1">Ingresa tu nueva contraseña</string>
    <string name="txtchangepass2">Confirma tu contraseña</string>
    <string name="hintchangepass2">Confirma tu contraseña</string>
    <string name="btnchangepass_cancel">Cancelar</string>
    <string name="btnchangepass_save">Confirmar</string>
    <string name="txtsetting">Configuración ⚙️</string>
    <string name="set_edtacc">Editar perfil</string>
    <string name="set_edtpas">Cambiar contraseña</string>
    <string name="set_exit">Salir</string>

    <!--    para ui RecoverPass-->
    <string name="txt_restablecer_pwd">Restablece tu contraseña 🔒</string>
    <string name="txt_comentario_pwd">Ingresa tu correo electrónico para restablecer su contraseña.</string>
    <string name="txt_correo_electronico">Correo electrónico</string>
    <string name="txt_restablecer">Restablecer</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="seraching">Porfavor espere...</string>
    <string name="unidad">Unidad</string>
    <string name="txtBack">Volver</string>
    <string name="tema">Tema</string>
    <string name="btnEval">Evaluación</string>
    <string name="evalTit">Evaluación</string>
    <string name="eval_quest">¿Cuál es la imagen correcta para </string>
    <string name="themeTit">Session tit</string>
    <string name="btn_eval">Siguiente</string>
    <string name="btn_calcelevl">Salir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_result">Resultados\n</string>
    <string name="txt_glosary">Contenido:</string>
    <string name="respuestas_correctas">Respuestas correctas:</string>
    <string name="respuestas_incorrectas">Respuestas incorrectas:</string>
    <string name="preguntas">Total de preguntas:</string>
    <string name="btnsgtEval">Siguiente</string>
    <string name="porcentaje">Puntaje:</string>
    <string name="btnCapture">Captura</string>
    <string name="btnAcept">Verificar</string>
    <string name="clasTit">CLASIFICADOR</string>
    <string name="respClasif">RESPUESTA</string>
    <string name="pregClasif">Realiza la siguiente seña: </string>


</resources>