<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.RecoverPass.RecoverPass">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/txt_restablecer_pwd"
        android:textColor="#070606"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_comentario_pwd"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/edt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txt_correo_electronico"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_restablecer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_restablecer"
        />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cancelar"
        />

</LinearLayout>