<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.Login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logols"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"></ImageView>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtappname"
        android:fontFamily="@font/bungee"
        android:textSize="40sp"
        android:layout_marginLeft="40dp" />
    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgwelcome"
        android:fontFamily="@font/bungee"
        android:textSize="20sp"
        android:layout_marginLeft="40dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/efredformulario"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/logUser"
                app:helperTextTextColor="@color/purple_500">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtlogUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logedtUser"
                    android:cursorVisible="true"
                    ></android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/logPass"
                app:helperTextTextColor="@color/purple_500"
                app:counterMaxLength="15"
                app:counterEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtlogContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logedtPass"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    ></android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/txtlogrecovPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/txtlogRecovP"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/efredbuttons"
        android:layout_gravity="center"
        android:text="@string/logBtn"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:textColor="#FFFFFF"
        android:textSize="13dp"></Button>

    <TextView
        android:id="@+id/txtlogRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logRegist"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginVertical="20dp"
        ></TextView>

</LinearLayout>