<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#343EE5"
    tools:context=".ui.changepassword.changePassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txteditpass"
        android:fontFamily="@font/bungee"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">
        <ImageView
            android:id="@+id/imageview_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/profile_picture"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:id="@+id/txt_changepass_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre de usuario"
                android:drawableLeft="@drawable/ic_user"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/txt_changepass_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo Electrónico"
                android:drawableLeft="@drawable/ic_mail"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg3"
        android:paddingVertical="30dp"
        android:paddingHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/txtchangepass1"
                android:layout_marginVertical="30dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtchangepass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintchangepass1"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    ></android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/txtchangepass2"
                android:layout_marginBottom="30dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtchangepass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintchangepass2"
                    android:cursorVisible="true"
                    ></android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <Button
                android:id="@+id/button_changepass_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/efredbuttonsv2"
                android:text="@string/btnchangepass_cancel"
                android:textColor="@color/blue"
                android:textSize="13dp" />
            <Button
                android:id="@+id/button_changepass_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/efredbuttons"
                android:text="@string/btnchangepass_save"
                android:textColor="@color/white"
                android:textSize="13dp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>