<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.Clasificador">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_conf_fondo">

        <Button
            android:layout_width="37dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_back_2"
            android:id="@+id/btnBack"/>

        <TextView
            android:id="@+id/txt_Theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/btnBack"
            android:fontFamily="@font/bungee"
            android:text="@string/clasTit"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/txtTit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/pregClasif"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/txtTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="A"
            android:textSize="50sp"
            />
        <Button
            android:id="@+id/btnRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCapture"/>
        <Button
            android:id="@+id/btnAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAcept"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imvCapture"
        android:layout_width="match_parent"
        android:layout_height="1000px"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/respClasif"
        android:textSize="50sp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/respClasif"
        android:textSize="30sp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/txtResp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/respClasif"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:visibility="gone"
        />

</LinearLayout>