<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:orientation="vertical"
    android:background="#343EE5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtsetting"
        android:fontFamily="@font/bungee"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">
        <ImageView
            android:id="@+id/imageview_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/profile_picture"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:id="@+id/txt_setting_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre de usuario"
                android:drawableLeft="@drawable/ic_user"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/txt_setting_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Correo Electrónico"
                android:drawableLeft="@drawable/ic_email"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg3"
        android:paddingVertical="30dp"
        android:paddingHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_setting_edit_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_edtacc"
                android:drawableLeft="@drawable/ic_editprofile"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/txt_setting_edit_pas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_edtpas"
                android:drawableLeft="@drawable/ic_changepass"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/txt_setting_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_exit"
                android:drawableLeft="@drawable/ic_logout2"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>